--- a/centre/frontend/.env
+++ b/centre/frontend/.env
@@ -1,3 +1,3 @@
 VITE_API_ENDPOINT=/api
-VITE_INSTRUCTION_FILTER_ENDPOINT=https://gist.github.com/phvietan/db95dbda1bb7ebb7dc15efae70905658
-VITE_INSTRUCTION_EXT_ENDPOINT=https://gist.github.com/phvietan/3f3507311436218b95dbbeee045daf9e
+VITE_INSTRUCTION_FILTER_ENDPOINT=https://docs.shadeless.app/tutorial/shadeless-app-filter/
+VITE_INSTRUCTION_SHADELESS=https://docs.shadeless.app/
