--- a/centre/frontend/dockerfile.prod
+++ b/centre/frontend/dockerfile.prod
@@ -1,11 +1,11 @@
-FROM node:16-buster
+FROM node:16-buster as builder
 
 WORKDIR /app
 
-RUN npm install --global serve
-
 COPY . .
-
 RUN npm i && npm run build
 
-CMD serve dist -l 3000 -s
+FROM nginx:latest
+
+COPY default.conf /etc/nginx/conf.d/default.conf
+COPY --from=builder /app/dist /usr/share/nginx/html
