--- a/centre/frontend/.env.production
+++ b/centre/frontend/.env.production
@@ -1,3 +1,4 @@
 VITE_API_ENDPOINT=/api
 VITE_INSTRUCTION_FILTER_ENDPOINT=https://docs.shadeless.app/tutorial/shadeless-app-filter/
 VITE_INSTRUCTION_SHADELESS=https://docs.shadeless.app/xxx
+VITE_SHADELESS_VERSION=1.0.0
