--- a/centre/backend/package.json
+++ b/centre/backend/package.json
@@ -19,7 +19,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "devtool:gentest": "NODE_ENV=test node dist/devtools/index.js gentest"
+    "devtool:gentest": "NODE_ENV=test node dist/devtools/index.js gentest",
+    "devtool:acc": "NODE_ENV=test node dist/devtools/index.js acc"
   },
   "dependencies": {
     "@drstrain/drutil": "^1.2.4",
