--- a/centre/backend/package.json
+++ b/centre/backend/package.json
@@ -24,12 +24,14 @@
   },
   "dependencies": {
     "@drstrain/drutil": "^1.2.4",
+    "@nestjs/bull": "^0.6.3",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/mongoose": "^9.2.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/serve-static": "^3.0.0",
     "bcrypt": "^5.1.0",
+    "bull": "^4.10.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "jsonwebtoken": "^9.0.0",
@@ -44,6 +46,7 @@
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/bull": "^4.10.0",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.4",
     "@types/jsonwebtoken": "^9.0.1",
