--- a/centre/backend/package.json
+++ b/centre/backend/package.json
@@ -34,7 +34,7 @@
     "bull": "^4.10.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
-    "jsonwebtoken": "^9.0.0",
+    "cookie-parser": "^1.4.6",
     "mongoose": "^6.5.2",
     "mv": "^2.1.1",
     "reflect-metadata": "^0.1.13",
@@ -47,9 +47,9 @@
     "@nestjs/testing": "^9.0.0",
     "@types/bcrypt": "^5.0.0",
     "@types/bull": "^4.10.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.4",
-    "@types/jsonwebtoken": "^9.0.1",
     "@types/multer": "^1.4.7",
     "@types/mv": "^2.1.2",
     "@types/node": "^16.0.0",
