--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 files
-files-prod
 # compiled output
 dist
 node_modules
@@ -31,3 +30,6 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+docker-compose.line-prod.yml
+run.line-prod.sh
